--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -3037,6 +3037,8 @@ Deny from 108.165.243.112
 Deny from 108.165.243.113
 Deny from 108.165.243.129
 Deny from 108.165.243.137
+Deny from 108.165.243.23
+Deny from 108.165.243.6
 Deny from 108.165.243.70
 Deny from 108.165.243.85
 Deny from 108.165.243.90
@@ -12240,6 +12242,7 @@ Deny from 176.33.109.105
 Deny from 176.33.109.50
 Deny from 176.33.67.201
 Deny from 176.33.96.180
+Deny from 176.33.98.32
 Deny from 176.36.102.13
 Deny from 176.40.231.28
 Deny from 176.42.16.37
@@ -13558,6 +13561,7 @@ Deny from 181.37.87.95
 Deny from 181.39.183.116
 Deny from 18.139.219.34
 Deny from 181.40.58.25
+Deny from 181.40.82.142
 Deny from 18.141.202.153
 Deny from 181.41.206.19
 Deny from 18.142.107.34
@@ -20854,6 +20858,7 @@ Deny from 213.207.43.179
 Deny from 213.208.33.182
 Deny from 213.212.231.114
 Deny from 213.218.204.46
+Deny from 213.218.251.109
 Deny from 213.225.13.122
 Deny from 213.226.123.211
 Deny from 213.226.141.153
@@ -27937,6 +27942,7 @@ Deny from 52.163.58.165
 Deny from 52.163.60.186
 Deny from 52.163.61.248
 Deny from 52.163.61.66
+Deny from 52.163.61.88
 Deny from 52.163.63.83
 Deny from 52.163.79.127
 Deny from 52.163.87.223
@@ -33533,6 +33539,7 @@ Deny from 95.117.22.94
 Deny from 95.12.117.227
 Deny from 95.128.43.164
 Deny from 95.136.106.40
+Deny from 94.136.191.36
 Deny from 95.137.185.225
 Deny from 95.140.124.212
 Deny from 95.140.195.42
