--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -1032,6 +1032,7 @@ Deny from 103.15.252.224
 Deny from 103.15.252.70
 Deny from 103.15.254.2
 Deny from 103.152.68.203
+Deny from 103.152.68.213
 Deny from 103.152.68.216
 Deny from 103.152.68.219
 Deny from 103.152.68.251
@@ -1840,6 +1841,7 @@ Deny from 103.55.33.21
 Deny from 103.55.39.107
 Deny from 103.55.71.54
 Deny from 103.56.156.90
+Deny from 103.56.160.197
 Deny from 103.56.160.61
 Deny from 103.56.229.131
 Deny from 103.56.237.134
@@ -2152,6 +2154,7 @@ Deny from 104.168.133.163
 Deny from 104.168.133.166
 Deny from 104.168.133.187
 Deny from 104.168.133.22
+Deny from 104.168.133.238
 Deny from 104.168.133.253
 Deny from 104.168.133.46
 Deny from 104.168.133.49
@@ -2177,6 +2180,7 @@ Deny from 104.168.137.23
 Deny from 104.168.138.191
 Deny from 104.168.138.203
 Deny from 104.168.138.77
+Deny from 104.168.140.115
 Deny from 104.168.140.239
 Deny from 104.168.140.247
 Deny from 104.168.140.56
@@ -2456,6 +2460,7 @@ Deny from 104.248.145.34
 Deny from 104.248.147.0
 Deny from 104.248.147.188
 Deny from 104.248.147.190
+Deny from 104.248.150.49
 Deny from 104.248.151.211
 Deny from 104.248.152.173
 Deny from 104.248.152.178
@@ -3038,6 +3043,7 @@ Deny from 108.165.243.113
 Deny from 108.165.243.129
 Deny from 108.165.243.137
 Deny from 108.165.243.23
+Deny from 108.165.243.5
 Deny from 108.165.243.6
 Deny from 108.165.243.70
 Deny from 108.165.243.85
@@ -3672,6 +3678,7 @@ Deny from 111.231.225.71
 Deny from 111.235.148.67
 Deny from 111.235.65.131
 Deny from 111.235.65.64
+Deny from 111.235.65.66
 Deny from 111.235.65.70
 Deny from 111.235.65.77
 Deny from 111.235.65.78
@@ -3721,6 +3728,7 @@ Deny from 111.90.211.153
 Deny from 111.90.227.139
 Deny from 111.91.227.248
 Deny from 111.92.117.74
+Deny from 111.92.23.125
 Deny from 111.92.26.34
 Deny from 111.92.27.245
 Deny from 111.92.45.204
@@ -4246,6 +4254,7 @@ Deny from 115.133.11.151
 Deny from 115.133.23.135
 Deny from 115.133.234.197
 Deny from 115.133.4.133
+Deny from 115.133.77.177
 Deny from 115.135.219.235
 Deny from 115.135.26.91
 Deny from 115.135.28.1
@@ -5226,6 +5235,7 @@ Deny from 120.50.4.26
 Deny from 120.50.50.200
 Deny from 120.53.13.226
 Deny from 120.53.21.151
+Deny from 120.56.110.27
 Deny from 120.56.117.78
 Deny from 120.56.233.164
 Deny from 120.57.7.32
@@ -5603,6 +5613,7 @@ Deny from 122.52.99.116
 Deny from 122.53.230.28
 Deny from 122.53.235.250
 Deny from 122.53.247.156
+Deny from 1.225.35.132
 Deny from 122.53.57.127
 Deny from 122.54.132.107
 Deny from 122.54.145.7
@@ -5641,6 +5652,7 @@ Deny from 123.201.54.212
 Deny from 123.20.250.117
 Deny from 123.208.108.162
 Deny from 123.214.180.143
+Deny from 123.231.10.34
 Deny from 123.231.105.99
 Deny from 123.231.106.204
 Deny from 123.231.107.3
@@ -6494,6 +6506,7 @@ Deny from 13.59.75.173
 Deny from 13.60.14.99
 Deny from 13.60.26.165
 Deny from 13.60.8.63
+Deny from 13.60.93.254
 Deny from 136.0.95.195
 Deny from 13.61.100.45
 Deny from 136.144.130.214
@@ -6625,6 +6638,7 @@ Deny from 136.158.82.194
 Deny from 136.158.82.203
 Deny from 136.158.83.148
 Deny from 136.158.83.29
+Deny from 13.61.6.170
 Deny from 136.169.168.234
 Deny from 136.175.8.35
 Deny from 136.185.10.50
@@ -6680,6 +6694,7 @@ Deny from 13.66.255.156
 Deny from 13.66.36.26
 Deny from 13.67.176.168
 Deny from 13.67.224.41
+Deny from 13.67.58.175
 Deny from 13.67.90.55
 Deny from 13.67.91.82
 Deny from 13.67.93.32
@@ -6848,6 +6863,7 @@ Deny from 13.79.36.136
 Deny from 137.97.105.117
 Deny from 137.97.71.15
 Deny from 137.97.85.52
+Deny from 13.79.83.93
 Deny from 13.79.89.32
 Deny from 13.79.90.255
 Deny from 13.79.91.107
@@ -7871,6 +7887,7 @@ Deny from 143.44.185.71
 Deny from 143.44.192.101
 Deny from 143.44.192.125
 Deny from 143.44.192.225
+Deny from 143.44.192.43
 Deny from 143.44.192.5
 Deny from 143.44.192.58
 Deny from 143.44.193.110
@@ -8158,6 +8175,7 @@ Deny from 146.70.178.244
 Deny from 146.70.181.230
 Deny from 146.70.181.235
 Deny from 146.70.183.206
+Deny from 146.70.184.15
 Deny from 146.70.185.105
 Deny from 146.70.189.107
 Deny from 146.70.189.198
@@ -8209,6 +8227,7 @@ Deny from 147.182.200.94
 Deny from 147.182.215.209
 Deny from 147.182.227.255
 Deny from 147.182.235.201
+Deny from 147.182.237.4
 Deny from 147.185.242.63
 Deny from 147.185.250.133
 Deny from 147.235.151.174
@@ -9874,6 +9893,7 @@ Deny from 158.62.67.110
 Deny from 158.62.67.120
 Deny from 158.62.67.140
 Deny from 158.62.74.128
+Deny from 158.62.74.229
 Deny from 158.62.74.23
 Deny from 158.62.75.90
 Deny from 158.62.76.216
@@ -11662,6 +11682,7 @@ Deny from 172.93.108.184
 Deny from 172.93.128.186
 Deny from 172.93.143.172
 Deny from 172.93.167.203
+Deny from 172.93.213.181
 Deny from 172.94.23.184
 Deny from 172.94.23.81
 Deny from 172.94.53.34
@@ -11950,6 +11971,7 @@ Deny from 174.91.216.94
 Deny from 174.91.190.90
 Deny from 174.92.161.88
 Deny from 174.94.93.253
+Deny from 174.95.105.102
 Deny from 174.95.226.149
 Deny from 175.100.46.172
 Deny from 175.101.112.99
@@ -12265,7 +12287,9 @@ Deny from 176.84.192.72
 Deny from 176.88.102.182
 Deny from 176.88.127.232
 Deny from 176.88.138.34
+Deny from 176.88.36.177
 Deny from 176.88.60.102
+Deny from 176.88.77.76
 Deny from 176.88.84.152
 Deny from 176.88.92.165
 Deny from 176.88.94.221
@@ -13720,7 +13744,9 @@ Deny from 182.16.3.82
 Deny from 182.167.182.3
 Deny from 18.217.145.33
 Deny from 18.217.180.0
+Deny from 18.217.210.253
 Deny from 182.172.168.53
+Deny from 182.172.56.228
 Deny from 182.176.115.42
 Deny from 182.176.121.23
 Deny from 182.176.157.86
@@ -13862,6 +13888,7 @@ Deny from 18.224.44.81
 Deny from 18.224.66.219
 Deny from 18.224.85.64
 Deny from 18.225.209.157
+Deny from 18.227.114.49
 Deny from 18.227.140.81
 Deny from 182.253.133.208
 Deny from 182.253.146.246
@@ -17421,6 +17448,7 @@ Deny from 196.189.127.185
 Deny from 196.189.127.206
 Deny from 196.189.127.43
 Deny from 196.189.14.18
+Deny from 196.189.144.253
 Deny from 196.189.144.95
 Deny from 196.189.145.41
 Deny from 196.189.147.125
@@ -17878,6 +17906,7 @@ Deny from 197.101.175.39
 Deny from 197.10.62.107
 Deny from 197.10.74.8
 Deny from 197.1.108.235
+Deny from 197.115.167.44
 Deny from 197.116.228.124
 Deny from 197.11.66.47
 Deny from 197.120.132.184
@@ -20081,6 +20110,7 @@ Deny from 206.84.147.35
 Deny from 206.84.148.35
 Deny from 206.84.148.42
 Deny from 206.84.148.43
+Deny from 206.84.152.7
 Deny from 206.84.187.8
 Deny from 206.84.189.18
 Deny from 206.84.190.76
@@ -20115,8 +20145,10 @@ Deny from 207.180.192.249
 Deny from 207.180.201.25
 Deny from 207.180.202.56
 Deny from 207.180.217.241
+Deny from 207.180.231.122
 Deny from 207.180.240.189
 Deny from 207.180.240.208
+Deny from 207.180.254.135
 Deny from 207.182.152.210
 Deny from 207.182.152.98
 Deny from 20.7.190.98
@@ -20668,6 +20700,7 @@ Deny from 212.227.12.174
 Deny from 212.227.149.137
 Deny from 212.227.169.235
 Deny from 212.227.176.155
+Deny from 212.227.201.53
 Deny from 212.227.203.178
 Deny from 212.227.210.241
 Deny from 212.227.215.32
@@ -21090,6 +21123,7 @@ Deny from 217.165.137.90
 Deny from 217.165.158.50
 Deny from 217.165.174.105
 Deny from 217.165.183.113
+Deny from 217.165.230.141
 Deny from 217.165.230.221
 Deny from 217.165.23.45
 Deny from 217.165.236.214
@@ -22174,6 +22208,7 @@ Deny from 27.57.159.62
 Deny from 27.57.162.182
 Deny from 27.5.72.44
 Deny from 27.57.40.3
+Deny from 27.57.95.52
 Deny from 27.58.162.139
 Deny from 27.58.32.12
 Deny from 27.58.32.34
@@ -22357,6 +22392,7 @@ Deny from 3.129.16.29
 Deny from 3.131.157.130
 Deny from 3.13.169.166
 Deny from 31.3.235.42
+Deny from 3.133.157.88
 Deny from 3.133.63.139
 Deny from 3.134.244.194
 Deny from 3.135.185.135
@@ -22973,6 +23009,7 @@ Deny from 35.180.98.173
 Deny from 35.181.112.20
 Deny from 35.181.155.226
 Deny from 35.181.45.41
+Deny from 35.181.48.37
 Deny from 35.181.48.41
 Deny from 35.181.53.198
 Deny from 35.181.87.238
@@ -25810,6 +25847,7 @@ Deny from 45.61.137.189
 Deny from 45.61.146.184
 Deny from 45.61.161.246
 Deny from 45.61.162.25
+Deny from 45.61.162.29
 Deny from 45.61.164.198
 Deny from 45.61.184.112
 Deny from 45.61.184.17
@@ -27485,6 +27523,7 @@ Deny from 51.195.190.75
 Deny from 51.195.193.170
 Deny from 51.195.88.32
 Deny from 51.195.94.201
+Deny from 51.20.123.158
 Deny from 51.20.34.246
 Deny from 51.210.156.4
 Deny from 51.210.182.54
@@ -27936,6 +27975,7 @@ Deny from 52.163.101.15
 Deny from 52.163.112.254
 Deny from 52.163.118.164
 Deny from 52.163.225.207
+Deny from 52.163.227.7
 Deny from 52.163.231.151
 Deny from 52.163.231.164
 Deny from 52.163.58.165
@@ -28090,6 +28130,7 @@ Deny from 52.187.214.63
 Deny from 52.187.227.109
 Deny from 52.187.26.123
 Deny from 52.187.27.145
+Deny from 52.187.30.179
 Deny from 52.187.31.232
 Deny from 52.187.42.241
 Deny from 52.187.42.7
@@ -28098,6 +28139,7 @@ Deny from 52.187.46.56
 Deny from 52.187.47.44
 Deny from 52.187.65.64
 Deny from 52.187.72.36
+Deny from 52.187.74.224
 Deny from 52.187.79.186
 Deny from 52.188.109.195
 Deny from 52.188.147.177
@@ -28213,6 +28255,7 @@ Deny from 52.60.189.115
 Deny from 52.64.20.252
 Deny from 52.65.15.196
 Deny from 52.66.242.197
+Deny from 52.66.250.86
 Deny from 5.2.67.226
 Deny from 5.2.69.22
 Deny from 5.2.69.42
@@ -28261,6 +28304,7 @@ Deny from 54.145.28.185
 Deny from 54.146.83.58
 Deny from 54.147.13.77
 Deny from 54.147.44.23
+Deny from 54.149.144.123
 Deny from 54.151.184.195
 Deny from 54.151.189.202
 Deny from 54.152.123.142
@@ -29890,6 +29934,7 @@ Deny from 67.43.12.62
 Deny from 67.43.238.247
 Deny from 67.81.14.56
 Deny from 67.84.32.187
+Deny from 67.86.201.53
 Deny from 68.100.153.6
 Deny from 68.102.166.77
 Deny from 68.111.126.155
@@ -31569,6 +31614,7 @@ Deny from 83.139.146.156
 Deny from 83.143.116.3
 Deny from 83.147.181.253
 Deny from 83.147.36.62
+Deny from 83.147.36.67
 Deny from 83.147.52.49
 Deny from 83.148.221.47
 Deny from 83.150.215.90
@@ -33144,6 +33190,7 @@ Deny from 92.51.101.18
 Deny from 92.51.105.214
 Deny from 92.51.2.233
 Deny from 92.53.16.2
+Deny from 92.53.21.159
 Deny from 92.53.24.117
 Deny from 92.53.26.246
 Deny from 92.53.30.83
@@ -33379,6 +33426,7 @@ Deny from 94.156.71.224
 Deny from 94.158.22.74
 Deny from 94.158.244.231
 Deny from 94.16.112.201
+Deny from 94.16.115.121
 Deny from 94.16.117.97
 Deny from 94.16.121.91
 Deny from 94.174.212.55
