--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -924,6 +924,7 @@ Deny from 103.137.153.148
 Deny from 103.137.185.124
 Deny from 103.137.185.241
 Deny from 103.137.209.142
+Deny from 103.137.44.246
 Deny from 103.137.89.131
 Deny from 103.137.91.4
 Deny from 103.138.117.2
@@ -1261,6 +1262,7 @@ Deny from 103.175.37.68
 Deny from 103.175.8.57
 Deny from 103.175.88.22
 Deny from 103.175.88.70
+Deny from 103.175.89.205
 Deny from 103.176.11.80
 Deny from 103.176.128.34
 Deny from 103.176.136.210
@@ -1335,6 +1337,7 @@ Deny from 103.186.123.214
 Deny from 103.186.123.217
 Deny from 103.186.123.233
 Deny from 103.186.144.76
+Deny from 103.186.184.120
 Deny from 103.186.184.49
 Deny from 103.186.185.205
 Deny from 103.186.216.14
@@ -2206,6 +2209,7 @@ Deny from 104.168.144.76
 Deny from 104.168.145.150
 Deny from 104.168.145.180
 Deny from 104.168.145.192
+Deny from 104.168.145.84
 Deny from 104.168.146.233
 Deny from 104.168.146.52
 Deny from 104.168.146.65
@@ -2619,6 +2623,7 @@ Deny from 105.160.9.128
 Deny from 105.160.93.252
 Deny from 105.161.208.185
 Deny from 105.162.1.202
+Deny from 105.163.0.132
 Deny from 105.163.0.150
 Deny from 105.163.0.205
 Deny from 105.163.1.243
@@ -2773,6 +2778,7 @@ Deny from 106.203.130.67
 Deny from 106.203.233.168
 Deny from 106.203.239.153
 Deny from 106.204.48.166
+Deny from 106.205.122.161
 Deny from 106.205.156.191
 Deny from 106.205.188.93
 Deny from 106.205.199.105
@@ -4022,6 +4028,7 @@ Deny from 112.209.209.220
 Deny from 112.209.224.71
 Deny from 112.209.235.237
 Deny from 112.209.240.201
+Deny from 112.209.29.35
 Deny from 112.209.36.28
 Deny from 112.209.41.88
 Deny from 112.209.47.104
@@ -6341,6 +6348,7 @@ Deny from 13.232.8.15
 Deny from 13.232.96.15
 Deny from 13.233.173.193
 Deny from 13.233.214.12
+Deny from 13.233.2.160
 Deny from 13.233.4.122
 Deny from 13.233.73.212
 Deny from 13.234.110.168
@@ -6375,6 +6383,7 @@ Deny from 13.39.148.5
 Deny from 13.39.16.132
 Deny from 13.39.16.145
 Deny from 13.39.83.164
+Deny from 13.39.83.238
 Deny from 134.0.154.177
 Deny from 134.0.205.110
 Deny from 134.119.213.146
@@ -8050,6 +8059,7 @@ Deny from 144.91.100.149
 Deny from 144.91.104.163
 Deny from 144.91.106.36
 Deny from 144.91.113.229
+Deny from 144.91.126.61
 Deny from 144.91.69.245
 Deny from 144.91.72.238
 Deny from 144.91.77.202
@@ -8103,6 +8113,7 @@ Deny from 146.190.107.237
 Deny from 146.190.108.97
 Deny from 146.190.120.36
 Deny from 146.190.129.61
+Deny from 146.190.131.158
 Deny from 146.190.132.46
 Deny from 146.190.160.11
 Deny from 146.190.169.63
@@ -9266,6 +9277,7 @@ Deny from 154.246.59.32
 Deny from 154.247.190.83
 Deny from 154.247.59.172
 Deny from 154.251.32.63
+Deny from 154.255.237.205
 Deny from 154.26.129.173
 Deny from 154.26.132.211
 Deny from 154.26.138.8
@@ -11861,6 +11873,9 @@ Deny from 173.239.214.76
 Deny from 173.239.214.78
 Deny from 173.239.214.96
 Deny from 173.239.218.176
+Deny from 173.239.224.56
+Deny from 173.239.224.57
+Deny from 173.239.224.58
 Deny from 173.239.224.73
 Deny from 173.239.226.158
 Deny from 173.239.232.18
@@ -16766,6 +16781,7 @@ Deny from 193.218.118.156
 Deny from 193.218.118.231
 Deny from 193.219.87.41
 Deny from 193.222.96.157
+Deny from 193.227.178.7
 Deny from 193.23.253.75
 Deny from 193.233.133.196
 Deny from 193.233.177.202
@@ -17322,6 +17338,7 @@ Deny from 195.78.54.117
 Deny from 195.78.54.115
 Deny from 195.78.54.120
 Deny from 195.78.54.128
+Deny from 195.78.54.13
 Deny from 195.78.54.134
 Deny from 195.78.54.146
 Deny from 195.78.54.16
@@ -18531,6 +18548,7 @@ Deny from 199.192.31.197
 Deny from 199.195.250.77
 Deny from 199.195.254.132
 Deny from 199.19.73.3
+Deny from 199.19.95.31
 Deny from 199.203.59.201
 Deny from 199.204.248.137
 Deny from 199.21.113.68
@@ -19794,6 +19812,7 @@ Deny from 203.162.79.194
 Deny from 203.170.74.130
 Deny from 203.170.74.19
 Deny from 203.175.73.21
+Deny from 203.176.137.163
 Deny from 203.177.0.42
 Deny from 203.177.103.250
 Deny from 203.177.196.122
@@ -20729,6 +20748,7 @@ Deny from 212.224.76.233
 Deny from 212.224.86.228
 Deny from 212.224.98.109
 Deny from 212.227.12.174
+Deny from 212.227.135.39
 Deny from 212.227.149.137
 Deny from 212.227.169.235
 Deny from 212.227.176.155
@@ -21128,6 +21148,7 @@ Deny from 217.160.246.130
 Deny from 217.160.247.30
 Deny from 217.160.247.82
 Deny from 217.160.253.13
+Deny from 217.160.25.51
 Deny from 217.160.29.82
 Deny from 217.160.33.10
 Deny from 217.160.33.183
@@ -22298,6 +22319,7 @@ Deny from 3.108.126.63
 Deny from 3.109.183.76
 Deny from 3.109.202.180
 Deny from 3.110.109.201
+Deny from 3.110.43.164
 Deny from 3.111.149.29
 Deny from 31.11.36.135
 Deny from 31.11.36.143
@@ -22473,6 +22495,7 @@ Deny from 3.145.91.100
 Deny from 3.145.92.203
 Deny from 31.47.30.57
 Deny from 31.47.55.138
+Deny from 3.147.71.27
 Deny from 3.147.84.33
 Deny from 3.15.233.183
 Deny from 3.15.234.70
@@ -29283,6 +29306,7 @@ Deny from 61.245.161.199
 Deny from 61.245.170.144
 Deny from 61.245.171.165
 Deny from 61.2.45.176
+Deny from 61.245.30.77
 Deny from 61.246.20.198
 Deny from 61.246.2.81
 Deny from 61.246.87.206
@@ -32307,6 +32331,7 @@ Deny from 87.117.230.146
 Deny from 87.119.130.166
 Deny from 87.119.186.149
 Deny from 87.120.113.19
+Deny from 87.120.113.29
 Deny from 87.120.114.143
 Deny from 87.120.114.171
 Deny from 87.120.114.239
@@ -32323,6 +32348,7 @@ Deny from 87.120.125.67
 Deny from 87.120.125.89
 Deny from 87.120.126.221
 Deny from 87.120.126.223
+Deny from 87.120.127.54
 Deny from 87.120.84.168
 Deny from 87.120.84.132
 Deny from 87.120.84.182
