--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -107,6 +107,7 @@ Deny from 101.32.205.183
 Deny from 101.32.62.196
 Deny from 101.34.235.14
 Deny from 101.34.244.228
+Deny from 101.36.123.35
 Deny from 101.42.41.226
 Deny from 101.42.48.239
 Deny from 101.43.19.48
@@ -280,6 +281,7 @@ Deny from 102.182.46.149
 Deny from 102.182.46.155
 Deny from 102.182.46.45
 Deny from 102.185.158.29
+Deny from 102.185.16.87
 Deny from 102.185.239.172
 Deny from 102.185.54.62
 Deny from 102.186.11.167
@@ -508,6 +510,7 @@ Deny from 102.38.50.74
 Deny from 102.38.5.105
 Deny from 102.38.5.54
 Deny from 102.39.173.249
+Deny from 102.39.64.65
 Deny from 102.40.109.32
 Deny from 102.40.246.45
 Deny from 102.41.187.133
@@ -1329,6 +1332,7 @@ Deny from 103.183.229.105
 Deny from 103.183.55.228
 Deny from 103.183.83.183
 Deny from 103.184.237.15
+Deny from 103.185.100.6
 Deny from 103.185.204.74
 Deny from 103.185.236.12
 Deny from 103.185.237.151
@@ -1736,6 +1740,7 @@ Deny from 103.27.237.152
 Deny from 103.27.239.113
 Deny from 103.27.34.22
 Deny from 103.28.116.81
+Deny from 103.28.243.120
 Deny from 103.28.246.110
 Deny from 103.28.246.20
 Deny from 103.28.246.54
@@ -1984,6 +1989,7 @@ Deny from 103.80.82.33
 Deny from 103.81.192.22
 Deny from 103.81.213.138
 Deny from 103.81.215.236
+Deny from 103.81.236.27
 Deny from 103.81.238.172
 Deny from 103.82.240.139
 Deny from 103.81.242.250
@@ -2207,6 +2213,7 @@ Deny from 104.168.144.162
 Deny from 104.168.144.48
 Deny from 104.168.144.76
 Deny from 104.168.145.150
+Deny from 104.168.145.157
 Deny from 104.168.145.180
 Deny from 104.168.145.192
 Deny from 104.168.145.84
@@ -2711,6 +2718,7 @@ Deny from 105.235.220.151
 Deny from 105.235.246.97
 Deny from 105.235.71.141
 Deny from 105.244.101.31
+Deny from 105.244.38.161
 Deny from 105.245.172.112
 Deny from 105.245.172.5
 Deny from 105.246.128.109
@@ -3708,6 +3716,7 @@ Deny from 111.68.102.20
 Deny from 111.68.105.62
 Deny from 111.68.1.162
 Deny from 111.68.119.154
+Deny from 111.68.1.90
 Deny from 111.68.8.162
 Deny from 111.68.8.18
 Deny from 111.68.8.226
@@ -5611,6 +5620,7 @@ Deny from 122.3.19.216
 Deny from 122.3.204.148
 Deny from 122.3.241.254
 Deny from 12.233.61.234
+Deny from 122.3.86.99
 Deny from 122.3.87.26
 Deny from 1.22.48.35
 Deny from 122.50.197.176
@@ -5966,6 +5976,7 @@ Deny from 125.52.54.45
 Deny from 125.62.195.128
 Deny from 125.62.88.228
 Deny from 125.63.100.204
+Deny from 125.63.100.37
 Deny from 125.63.105.224
 Deny from 125.63.120.142
 Deny from 125.63.121.69
@@ -6395,6 +6406,7 @@ Deny from 134.122.112.76
 Deny from 134.122.122.112
 Deny from 134.122.130.251
 Deny from 134.122.137.45
+Deny from 134.122.184.82
 Deny from 134.122.19.0
 Deny from 134.122.200.201
 Deny from 134.122.27.24
@@ -6617,6 +6629,7 @@ Deny from 136.158.43.213
 Deny from 136.158.46.111
 Deny from 136.158.46.15
 Deny from 136.158.46.220
+Deny from 136.158.48.64
 Deny from 136.158.49.157
 Deny from 136.158.49.217
 Deny from 136.158.51.38
@@ -6808,6 +6821,7 @@ Deny from 13.74.182.94
 Deny from 13.74.195.106
 Deny from 13.74.220.189
 Deny from 13.74.252.212
+Deny from 13.74.48.191
 Deny from 13.74.49.211
 Deny from 13.74.50.28
 Deny from 13.74.53.223
@@ -7033,6 +7047,7 @@ Deny from 138.204.35.232
 Deny from 138.204.45.45
 Deny from 138.204.45.63
 Deny from 13.82.100.82
+Deny from 138.2.101.233
 Deny from 13.82.111.81
 Deny from 13.82.145.55
 Deny from 13.82.145.72
@@ -7926,6 +7941,7 @@ Deny from 14.39.188.137
 Deny from 143.92.149.227
 Deny from 143.92.170.147
 Deny from 143.92.32.15
+Deny from 143.92.34.134
 Deny from 143.92.35.49
 Deny from 143.92.40.166
 Deny from 143.92.43.152
@@ -8734,6 +8750,7 @@ Deny from 150.230.93.233
 Deny from 150.238.219.34
 Deny from 150.242.109.10
 Deny from 150.242.14.199
+Deny from 150.242.200.204
 Deny from 150.242.22.230
 Deny from 150.242.23.229
 Deny from 150.95.109.187
@@ -10944,6 +10961,7 @@ Deny from 167.71.22.137
 Deny from 167.71.223.76
 Deny from 167.71.225.39
 Deny from 167.71.226.185
+Deny from 167.71.227.208
 Deny from 167.71.229.20
 Deny from 167.71.232.222
 Deny from 167.71.235.42
@@ -11704,6 +11722,7 @@ Deny from 172.81.58.40
 Deny from 172.82.128.197
 Deny from 172.86.116.191
 Deny from 172.86.116.245
+Deny from 172.86.117.143
 Deny from 172.86.121.237
 Deny from 172.86.64.19
 Deny from 172.86.75.240
@@ -12775,6 +12794,7 @@ Deny from 178.214.250.82
 Deny from 178.215.224.35
 Deny from 178.215.224.43
 Deny from 178.215.224.84
+Deny from 178.215.224.95
 Deny from 178.215.236.209
 Deny from 178.218.46.13
 Deny from 178.220.122.154
@@ -13205,6 +13225,7 @@ Deny from 180.190.179.141
 Deny from 180.190.181.88
 Deny from 180.190.19.103
 Deny from 180.190.200.111
+Deny from 180.190.209.120
 Deny from 180.190.211.35
 Deny from 180.190.212.164
 Deny from 180.190.215.28
@@ -13496,6 +13517,7 @@ Deny from 181.197.43.218
 Deny from 181.199.108.37
 Deny from 181.199.40.86
 Deny from 181.199.44.245
+Deny from 18.119.98.249
 Deny from 181.20.113.152
 Deny from 181.20.157.64
 Deny from 181.204.83.18
@@ -13536,6 +13558,7 @@ Deny from 181.214.205.128
 Deny from 181.214.205.132
 Deny from 181.214.206.18
 Deny from 181.214.206.30
+Deny from 181.214.206.46
 Deny from 181.214.206.31
 Deny from 181.214.206.57
 Deny from 181.214.218.110
@@ -14306,6 +14329,7 @@ Deny from 185.133.225.190
 Deny from 185.133.251.10
 Deny from 185.133.251.172
 Deny from 185.134.177.190
+Deny from 185.134.229.48
 Deny from 185.136.160.217
 Deny from 185.136.160.219
 Deny from 185.136.160.222
@@ -16368,6 +16392,7 @@ Deny from 191.96.227.254
 Deny from 191.96.252.2
 Deny from 191.96.52.4
 Deny from 191.96.67.246
+Deny from 191.97.121.169
 Deny from 191.97.78.133
 Deny from 191.97.87.108
 Deny from 191.97.9.90
@@ -19885,6 +19910,7 @@ Deny from 20.36.130.247
 Deny from 20.36.140.127
 Deny from 203.6.149.115
 Deny from 203.6.208.10
+Deny from 20.36.209.222
 Deny from 203.63.218.161
 Deny from 20.36.33.166
 Deny from 20.36.34.193
@@ -20926,6 +20952,7 @@ Deny from 213.177.192.179
 Deny from 213.177.193.37
 Deny from 213.186.182.25
 Deny from 213.186.188.195
+Deny from 213.192.17.237
 Deny from 213.194.144.144
 Deny from 213.194.159.74
 Deny from 213.194.186.7
@@ -22131,6 +22158,7 @@ Deny from 2.58.56.223
 Deny from 2.58.56.247
 Deny from 2.58.56.43
 Deny from 2.59.156.75
+Deny from 2.59.162.192
 Deny from 2.66.23.201
 Deny from 27.0.15.177
 Deny from 27.0.58.33
@@ -22316,6 +22344,7 @@ Deny from 3.0.90.49
 Deny from 3.10.198.248
 Deny from 3.105.169.193
 Deny from 3.108.126.63
+Deny from 3.108.238.210
 Deny from 3.109.183.76
 Deny from 3.109.202.180
 Deny from 3.110.109.201
@@ -22445,6 +22474,7 @@ Deny from 31.28.162.56
 Deny from 3.128.26.105
 Deny from 3.129.16.29
 Deny from 3.131.157.130
+Deny from 3.131.157.151
 Deny from 3.13.169.166
 Deny from 31.3.235.42
 Deny from 3.133.157.88
@@ -22457,6 +22487,7 @@ Deny from 3.135.240.120
 Deny from 3.137.137.253
 Deny from 3.137.195.213
 Deny from 3.137.41.101
+Deny from 3.138.142.249
 Deny from 3.138.194.49
 Deny from 3.138.195.146
 Deny from 3.138.196.95
@@ -22497,6 +22528,7 @@ Deny from 31.47.30.57
 Deny from 31.47.55.138
 Deny from 3.147.71.27
 Deny from 3.147.84.33
+Deny from 3.148.117.162
 Deny from 3.15.233.183
 Deny from 3.15.234.70
 Deny from 31.52.90.100
@@ -22544,6 +22576,7 @@ Deny from 3.229.137.239
 Deny from 3.229.137.28
 Deny from 3.230.169.138
 Deny from 3.231.219.78
+Deny from 3.23.128.157
 Deny from 3.23.128.99
 Deny from 3.235.138.152
 Deny from 3.235.147.245
@@ -25767,6 +25800,7 @@ Deny from 45.227.249.199
 Deny from 45.227.254.22
 Deny from 45.227.254.38
 Deny from 45.227.254.5
+Deny from 45.227.255.158
 Deny from 45.227.255.159
 Deny from 45.227.255.189
 Deny from 45.227.255.38
@@ -27990,6 +28024,7 @@ Deny from 52.149.208.235
 Deny from 52.149.40.237
 Deny from 52.149.4.204
 Deny from 52.151.248.205
+Deny from 52.15.149.26
 Deny from 52.152.138.35
 Deny from 52.152.150.11
 Deny from 52.15.255.202
@@ -28051,6 +28086,7 @@ Deny from 52.163.87.223
 Deny from 52.163.90.211
 Deny from 52.163.91.188
 Deny from 52.163.91.199
+Deny from 52.163.91.225
 Deny from 52.164.120.167
 Deny from 52.164.120.232
 Deny from 52.164.121.219
@@ -28289,6 +28325,7 @@ Deny from 5.246.102.117
 Deny from 5.246.86.137
 Deny from 52.47.132.237
 Deny from 52.47.165.96
+Deny from 52.47.181.100
 Deny from 52.47.198.170
 Deny from 52.47.201.113
 Deny from 5.248.164.213
@@ -30431,6 +30468,7 @@ Deny from 72.51.115.87
 Deny from 72.51.127.105
 Deny from 72.52.253.16
 Deny from 72.55.227.223
+Deny from 72.74.130.121
 Deny from 72.78.137.27
 Deny from 72.79.44.117
 Deny from 72.79.44.121
@@ -30835,6 +30873,7 @@ Deny from 77.237.238.88
 Deny from 77.237.244.87
 Deny from 77.237.55.181
 Deny from 77.240.103.210
+Deny from 77.241.72.43
 Deny from 77.243.22.192
 Deny from 77.243.22.56
 Deny from 77.243.23.184
@@ -31949,6 +31988,7 @@ Deny from 85.117.104.132
 Deny from 85.117.56.100
 Deny from 85.117.56.104
 Deny from 85.117.56.106
+Deny from 85.117.56.72
 Deny from 85.117.56.78
 Deny from 85.117.60.156
 Deny from 85.117.63.194
