--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -3245,6 +3245,7 @@ Deny from 109.205.213.18
 Deny from 109.205.213.230
 Deny from 109.205.213.242
 Deny from 109.205.213.26
+Deny from 109.205.213.58
 Deny from 109.205.46.4
 Deny from 109.206.240.39
 Deny from 109.206.241.121
@@ -7411,6 +7412,7 @@ Deny from 139.59.63.1
 Deny from 139.59.72.126
 Deny from 139.59.74.165
 Deny from 139.59.76.143
+Deny from 139.59.77.246
 Deny from 139.59.89.52
 Deny from 139.59.97.107
 Deny from 139.59.98.6
@@ -13264,6 +13266,7 @@ Deny from 180.190.176.24
 Deny from 180.190.179.141
 Deny from 180.190.181.88
 Deny from 180.190.19.103
+Deny from 180.190.19.222
 Deny from 180.190.200.111
 Deny from 180.190.209.120
 Deny from 180.190.211.35
@@ -13515,6 +13518,7 @@ Deny from 181.170.203.101
 Deny from 181.170.250.12
 Deny from 181.170.46.233
 Deny from 18.117.11.87
+Deny from 18.117.120.97
 Deny from 18.117.216.74
 Deny from 181.171.19.43
 Deny from 181.171.28.182
@@ -15077,6 +15081,7 @@ Deny from 186.168.156.195
 Deny from 186.170.136.159
 Deny from 186.170.139.185
 Deny from 186.170.79.145
+Deny from 186.17.208.81
 Deny from 186.17.226.231
 Deny from 186.173.138.133
 Deny from 186.1.73.166
@@ -17055,6 +17060,7 @@ Deny from 194.233.64.57
 Deny from 194.233.66.198
 Deny from 194.233.73.75
 Deny from 194.233.76.120
+Deny from 194.233.78.152
 Deny from 194.233.79.124
 Deny from 194.233.80.61
 Deny from 194.233.81.196
@@ -18222,6 +18228,7 @@ Deny from 197.232.8.130
 Deny from 197.232.96.146
 Deny from 197.232.99.209
 Deny from 197.234.118.70
+Deny from 197.234.19.154
 Deny from 197.234.221.170
 Deny from 197.234.50.114
 Deny from 197.235.14.235
@@ -21767,6 +21774,7 @@ Deny from 23.101.132.31
 Deny from 23.101.185.60
 Deny from 23.101.3.215
 Deny from 23.102.182.50
+Deny from 23.102.51.222
 Deny from 23.102.58.15
 Deny from 23.105.144.135
 Deny from 23.105.144.157
@@ -23161,6 +23169,7 @@ Deny from 35.180.91.135
 Deny from 35.180.98.173
 Deny from 35.181.112.20
 Deny from 35.181.155.226
+Deny from 35.181.167.211
 Deny from 35.181.169.160
 Deny from 35.181.45.41
 Deny from 35.181.48.37
@@ -28202,6 +28211,7 @@ Deny from 52.169.1.245
 Deny from 52.169.124.71
 Deny from 52.169.125.231
 Deny from 52.169.126.136
+Deny from 52.169.147.177
 Deny from 52.169.18.233
 Deny from 52.169.188.86
 Deny from 52.169.189.65
@@ -29078,6 +29088,7 @@ Deny from 57.128.19.137
 Deny from 57.128.24.77
 Deny from 57.128.37.136
 Deny from 57.128.85.20
+Deny from 57.129.20.102
 Deny from 57.138.80.24
 Deny from 5.78.101.22
 Deny from 5.78.64.195
@@ -29610,6 +29621,7 @@ Deny from 62.72.46.92
 Deny from 62.73.4.90
 Deny from 62.74.17.98
 Deny from 62.77.152.194
+Deny from 62.84.100.218
 Deny from 62.85.89.84
 Deny from 62.97.39.116
 Deny from 62.99.82.61
@@ -29656,6 +29668,7 @@ Deny from 64.124.8.192
 Deny from 64.124.8.193
 Deny from 64.124.8.194
 Deny from 64.124.8.195
+Deny from 64.124.8.202
 Deny from 64.124.8.206
 Deny from 64.124.8.213
 Deny from 64.124.8.217
@@ -30752,6 +30765,7 @@ Deny from 74.80.208.127
 Deny from 74.80.208.155
 Deny from 74.80.208.157
 Deny from 74.80.208.158
+Deny from 74.80.208.179
 Deny from 74.80.208.184
 Deny from 74.80.208.81
 Deny from 74.83.66.66
@@ -33603,6 +33617,7 @@ Deny from 94.154.117.195
 Deny from 94.154.188.130
 Deny from 94.154.189.233
 Deny from 94.154.191.236
+Deny from 94.154.19.39
 Deny from 94.154.239.69
 Deny from 94.156.104.49
 Deny from 94.156.14.13
