Updated .htaccess - 22 January 2025

--- a/private/.htaccess
+++ b/private/.htaccess
@@ -3082,10 +3082,28 @@ Deny from 108.165.243.137
 Deny from 108.165.243.23
 Deny from 108.165.243.5
 Deny from 108.165.243.6
+Deny from 108.165.243.65
 Deny from 108.165.243.70
+Deny from 108.165.243.76
+Deny from 108.165.243.81
+Deny from 108.165.243.82
+Deny from 108.165.243.83
+Deny from 108.165.243.84
 Deny from 108.165.243.85
+Deny from 108.165.243.86
+Deny from 108.165.243.87
+Deny from 108.165.243.88
+Deny from 108.165.243.89
 Deny from 108.165.243.90
+Deny from 108.165.243.91
+Deny from 108.165.243.92
+Deny from 108.165.243.93
+Deny from 108.165.243.94
 Deny from 108.165.243.95
+Deny from 108.165.243.96
+Deny from 108.165.243.97
+Deny from 108.165.243.98
+Deny from 108.165.243.99
 Deny from 108.166.42.56
 Deny from 108.167.132.33
 Deny from 108.167.132.38
@@ -8614,6 +8632,7 @@ Deny from 149.40.50.26
 Deny from 149.40.50.4
 Deny from 149.40.50.5
 Deny from 149.40.52.193
+Deny from 149.50.105.249
 Deny from 149.50.142.212
 Deny from 149.50.222.74
 Deny from 149.56.101.200
@@ -8978,9 +8997,11 @@ Deny from 15.236.224.248
 Deny from 15.236.42.130
 Deny from 15.237.128.43
 Deny from 15.237.128.65
+Deny from 15.237.144.110
 Deny from 15.237.182.238
 Deny from 15.237.209.59
 Deny from 15.237.220.170
+Deny from 15.237.254.24
 Deny from 15.237.52.210
 Deny from 15.237.61.174
 Deny from 15.237.94.193
@@ -11303,6 +11324,7 @@ Deny from 170.187.198.211
 Deny from 170.187.227.159
 Deny from 170.187.227.84
 Deny from 170.187.230.151
+Deny from 170.205.28.86
 Deny from 170.205.28.91
 Deny from 170.205.30.171
 Deny from 170.231.130.14
@@ -20792,6 +20814,7 @@ Deny from 212.102.41.34
 Deny from 212.102.41.36
 Deny from 212.102.41.37
 Deny from 212.102.42.202
+Deny from 212.102.46.36
 Deny from 212.102.46.41
 Deny from 212.102.46.47
 Deny from 212.102.46.66
@@ -22311,6 +22334,7 @@ Deny from 27.124.127.178
 Deny from 27.124.20.167
 Deny from 27.124.2.206
 Deny from 27.124.2.54
+Deny from 27.124.32.73
 Deny from 27.124.41.145
 Deny from 27.124.42.160
 Deny from 27.124.4.228
@@ -31701,6 +31725,7 @@ Deny from 82.165.102.39
 Deny from 82.165.103.56
 Deny from 82.165.104.24
 Deny from 82.165.117.55
+Deny from 82.165.125.69
 Deny from 82.165.184.76
 Deny from 82.165.185.18
 Deny from 82.165.185.225
